classDiagram
class EntityModel {
    - UUID id
    - datetime created_at
    - datetime updated_at
    + bool create()
    + bool update()
    + bool delete()
}

class User {
    + str first_name
    + str last_name
    + str email
    - str password
    + bool is_admin
    + bool register()
    + bool check_password(password: str)
    + bool login()
    + bool can_review(place_id: int)
}

class Place {
    - UUID owner_id
    + str title
    + str description
    + float price
    + float latitude
    + float longitude
    + list<Place> list()
    + list<Place> filter_by_location(location: str)
    + list<Place> filter_by_price(min_price: float, max_price: float)
}

class Review {
    - UUID user_id
    - UUID place_id
    + float rating
    + str comment
    + list<Review> list()
    
}
class Amenity {
    + str name
    + str description
    + list<Amenity> list()
    + bool attach_to_place(place: Place)
    + bool detach_from_place(place: Place)
}

class PlaceAmenity {
    - UUID place_id
    - UUID amenity_id
    + list<Amenity> list()
}

EntityModel <|-- User
EntityModel <|-- Place
EntityModel <|-- Review
EntityModel <|-- Amenity
EntityModel <|-- PlaceAmenity

User "1" *-- "*" Place : "owns"
Place "1" ..> "*" Review : "has"
Place "1" ..> "*" Amenity : "has"
User "1" *-- "*" Review : "creates"
Place "1" *-- "*" PlaceAmenity : "associates"
Amenity "1" *-- "*" PlaceAmenity : "associates"
